input from key event and output to dom

--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Homework 3</title>
-  <script src="assets/javascript/game.js"></script>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+  <h2>Wins</h2>
+  <div id="win"></div>
+
+  <h2>Guess The Word</h2>
+  <div id="placeholder"></div>
+
+  <h2>Remaining life</h2>
+  <div id="remaininglife"></div>
+
+  <h2>Wrong Letters</h2>
+  <div id="wrongletters"></div>
   
+  <script src="assets/javascript/game.js"></script>
 </body>
 </html>
