start using sound effects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+  <audio id="correct" src="assets/mp3/jg-032316-sfx-feedback-correct-12.mp3"  autostart="false"></audio>
+  <audio id="wrong"   src="assets/mp3/jg-032316-sfx-elearning-incorrect-answer-sound-4.mp3" autostart="false"></audio>
+
   <h2>Wins</h2>
   <div id="win"></div>
 
