use modal dialog box

--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
     <!-- <h2>Guess The Word</h2> -->
     <div id="secret-word"></div>
   
-    <div id="end">You are out of life.
-      <button id="end-button">Continue</button>
+    <!-- The Modal -->
+    <div id="main-modal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <h1 id="modal-text">Modal Message</h1>
+        <span class="button" id="modal-button">Button Text</span>
+      </div>
     </div>
-
-    <div id="start">
-      Welcome to Hangman
-      <button id="start-button">Start</button>
-    </div>
+    <!-- end The Modal -->
+    
 
     <div>
       <div id="score-box">
         <h2 id="score-text">SCORE</h2><!--
-        --><div id="score">100</div>
+        --><div id="score"></div>
       </div>
     </div>
     <div>
