add onended event for video

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
       <div id="hangmandiv">
         <div id="divVideo">
-            <video id="video" autostart="false">
+            <video id="video">
                 <source id="mp4"/>
             </video>
         </div>
