--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </video>
         </div>
         <svg id="hangmansvg" width="360" height="310">
-          <g id="hang" stroke="black" stroke-width="5">
+          <g id="hang" stroke="#ffffff" stroke-width="5">
             <g id="life1" display="none">
               <polyline points="10,300 350,300" />
             </g>
